fix: Adjust staff image dimensions and cropping for circular display

--- a/css/style.css
+++ b/css/style.css
@@ -471,11 +471,13 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 .gtco-staff img {
   width: 100px;
+  height: 100px;
   margin-bottom: 20px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   border-radius: 50%;
+  object-fit: cover;
 }
 .gtco-staff h3 {
   font-size: 24px;
